--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2011,14 +2011,14 @@ input, select, textarea {
 			
 		}
 		#projects .image {
-			border-radius: 150%;
+			border-radius: 120%;
 			height: 25;
 			margin-left: 2em;
-			width: 15em;
+			width: 18em;
 		}
 
 			#projects .image img {
-				border-radius: 150%;
+				border-radius: 120%;
 				display:flow-root;
 				width: 100%;
 			}
@@ -2097,56 +2097,26 @@ input, select, textarea {
 
 /* Icons */
 
-ul.projects {
+	ul.icons {
 		cursor: default;
 		list-style: none;
-		padding-left: 25%;
+		padding-left: 0;
 	}
 
-		ul.projects li .label {
+		ul.icons li {
 			display: inline-block;
-			height: 2.5%;
-			line-height: 2.5%;
-			padding: 2%;
-			color: rgba(255, 255, 255, 0.75);
+			height: 2.5em;
+			line-height: 2.5em;
+			padding: 0 0.5em;
 		}
-ul.restaurant {
-		cursor: default;
-		list-style: none;
-		padding-left: 25%;
-	}
 
-		ul.restaurant li .label {
-			display: inline-block;
-			height: 2.5%;
-			line-height: 2.5%;
-			padding: 2%;
-			margin-top: 11%;
-			color: rgba(255, 255, 255, 0.75);
+			ul.icons li .icon {
+				font-size: 0.8em;
+			}
+
+				ul.icons li .icon:before {
+					font-size: 2em;
 				}
-ul.whatsapp {
-		cursor: default;
-		list-style: none;
-		padding-left: 25%;
-	}
-
-		ul.whatsapp li .label {
-			display: inline-block;
-			height: 2.5%;
-			line-height: 2.5%;
-			padding: 2%;
-			margin-top: 11%;
-			color: rgba(255, 255, 255, 0.75);
-		}
-ul.projects li .icon:before {
-font-size: 2em;
-}
-ul.restaurant li .icon:before {
-	font-size: 2em;
-	}			
-	ul.whatsapp li .icon:before {
-		font-size: 2em;
-		}
 
 /* Actions */
 
