--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -247,7 +247,76 @@ input, select, textarea {
 	}
 
 /* Loader */	
-
+.loader {
+	color: rgb(124, 124, 124);
+	font-family: "Poppins",sans-serif;
+	font-weight: 500;
+	font-size: 25px;
+	-webkit-box-sizing: content-box;
+	box-sizing: content-box;
+	height: 40px;
+	padding: 10px 10px;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	border-radius: 8px;
+  }
+  
+  .words {
+	overflow: hidden;
+  }
+  
+  .word {
+	display: block;
+	height: 100%;
+	padding-left: 6px;
+	padding-top: 12px;
+	color: #956afa;
+	animation: spin_4991 4s infinite;
+  }
+  
+  @keyframes spin_4991 {
+	10% {
+	  -webkit-transform: translateY(-105%);
+	  transform: translateY(-105%);
+	}
+  
+	25% {
+	  -webkit-transform: translateY(-100%);
+	  transform: translateY(-100%);
+	}
+  
+	35% {
+	  -webkit-transform: translateY(-205%);
+	  transform: translateY(-205%);
+	}
+  
+	50% {
+	  -webkit-transform: translateY(-200%);
+	  transform: translateY(-200%);
+	}
+  
+	60% {
+	  -webkit-transform: translateY(-305%);
+	  transform: translateY(-305%);
+	}
+  
+	75% {
+	  -webkit-transform: translateY(-300%);
+	  transform: translateY(-300%);
+	}
+  
+	85% {
+	  -webkit-transform: translateY(-405%);
+	  transform: translateY(-405%);
+	}
+  
+	100% {
+	  -webkit-transform: translateY(-400%);
+	  transform: translateY(-400%);
+	}
+  }
+  
 /* Container */
 
 		@media screen and (max-width: 1280px) {
@@ -266,6 +335,7 @@ input, select, textarea {
 			}
 
 		}
+
 
 /* Row */
 
@@ -2309,118 +2379,7 @@ input, select, textarea {
 
 /* Button */
 
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	.button {
-		-moz-appearance: none;
-		-webkit-appearance: none;
-		-ms-appearance: none;
-		appearance: none;
-		-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-		background-color: transparent;
-		border-radius: 4px;
-		border: 0;
-		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.3);
-		color: #ffffff !important;
-		cursor: pointer;
-		display: inline-block;
-		font-weight: 300;
-		height: 3em;
-		line-height: 3em;
-		padding: 0 2.25em;
-		text-align: center;
-		text-decoration: none;
-		white-space: nowrap;
-	}
-
-		input[type="submit"]:hover, input[type="submit"]:active,
-		input[type="reset"]:hover,
-		input[type="reset"]:active,
-		input[type="button"]:hover,
-		input[type="button"]:active,
-		.button:hover,
-		.button:active {
-			box-shadow: inset 0 0 0 1px #e44c65;
-			color: #e44c65 !important;
-		}
-
-		input[type="submit"]:active,
-		input[type="reset"]:active,
-		input[type="button"]:active,
-		.button:active {
-			background-color: rgba(228, 76, 101, 0.15);
-		}
-
-		input[type="submit"].icon:before,
-		input[type="reset"].icon:before,
-		input[type="button"].icon:before,
-		.button.icon:before {
-			margin-right: 0.5em;
-		}
-
-		input[type="submit"].fit,
-		input[type="reset"].fit,
-		input[type="button"].fit,
-		.button.fit {
-			width: 100%;
-		}
-
-		input[type="submit"].small,
-		input[type="reset"].small,
-		input[type="button"].small,
-		.button.small {
-			font-size: 0.8em;
-		}
-
-		input[type="submit"].large,
-		input[type="reset"].large,
-		input[type="button"].large,
-		.button.large {
-			font-size: 1.35em;
-		}
-
-		input[type="submit"].primary,
-		input[type="reset"].primary,
-		input[type="button"].primary,
-		.button.primary {
-			background-color: #e44c65;
-			box-shadow: none;
-			color: #ffffff !important;
-		}
-
-			input[type="submit"].primary:hover,
-			input[type="reset"].primary:hover,
-			input[type="button"].primary:hover,
-			.button.primary:hover {
-				background-color: #e76278;
-			}
-
-			input[type="submit"].primary:active,
-			input[type="reset"].primary:active,
-			input[type="button"].primary:active,
-			.button.primary:active {
-				background-color: #e13652;
-			}
-
-		input[type="submit"].disabled, input[type="submit"]:disabled,
-		input[type="reset"].disabled,
-		input[type="reset"]:disabled,
-		input[type="button"].disabled,
-		input[type="button"]:disabled,
-		.button.disabled,
-		.button:disabled {
-			background-color: rgba(255, 255, 255, 0.3) !important;
-			box-shadow: none !important;
-			color: #ffffff !important;
-			cursor: default;
-			opacity: 0.25;
-		}
-
-
+  
 /* Spotlight */
 
 	.spotlight {
