--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2280,7 +2280,8 @@ input, select, textarea {
 					flex-shrink: 1;
 					padding: 1em 0 0 0;
 					text-align: center;
-					width: 100%;
+					width: 10%;
+					margin-left: 250px;
 				}
 
 					ul.actions:not(.fixed) li > * {
@@ -3262,8 +3263,8 @@ input, select, textarea {
 					padding: 4.0625em 1.5em 4.875em 1.5em;
 				}
 
-					#home .content header h2 {
-						font-size: 1.5em;
+					#home .content .words {
+						font-size: 18px;
 					}
 
 					#home .content .image {
@@ -3461,6 +3462,7 @@ input, select, textarea {
 
 	}
 
+	
 /* XSmall */
 
 	@media screen and (max-width: 480px) {
@@ -3504,7 +3506,9 @@ input, select, textarea {
 
 			#banner .content {
 				padding: 3em 1.5625em 5.25em 1.5625em;
+			box-sizing:;	
 			}
+
 
 		/* Footer */
 
