--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3508,6 +3508,27 @@ input, select, textarea {
 				padding: 3em 1.5625em 5.25em 1.5625em;
 			box-sizing:;	
 			}
+		#home {
+				box-shadow: 0 0.125em 0.5em 0 rgba(0, 0, 0, 0.25);
+				min-height: calc(100vh - 44px);
+			}
+
+				#home:before {
+					height: calc(100vh - 44px);
+				}
+
+				#home .content {
+					padding: 4.0625em 1.5em 4.875em 1.5em;
+				}
+
+					#home .content .words {
+						font-size: 18px;
+					}
+
+					#home .content .image {
+						height: 9em;
+						width: 9em;
+					}
 
 
 		/* Footer */
