--- a/style.css
+++ b/style.css
@@ -455,7 +455,7 @@ cursor: grab;
     height: 250px;
     max-width: 700px;
     list-style: none;
-    background: #fff;
+    background: var(--darkreader-bg--bg-color);
     border-radius: 8px;
     display: flex;
     cursor: pointer;
